--- a/.zimrc
+++ b/.zimrc
@@ -20,9 +20,9 @@ zmodule lukechilds/zsh-nvm
 # Prompt
 #
 # Exposes to prompts how long the last command took to execute, used by asciiship.
-zmodule duration-info
+# zmodule duration-info
 # Exposes git repository status information to prompts, used by asciiship.
-zmodule git-info
+# zmodule git-info
 # A heavily reduced, ASCII-only version of the Spaceship and Starship prompts.
 zmodule romkatv/powerlevel10k
 
