LFS for .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -12,3 +12,9 @@
 	autoStash = true
 [help]
 	autocorrect = 10
+
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
